# pretix-esncard

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  style.yml  tests.yml
esncard_validation/: apps.py  signals.py
esncard_validation/locale/de/LC_MESSAGES/: django.po
pretix_esncard/: api.py  forms.py  helpers.py  models.py  signals.py  validation.py
pretix_esncard/locale/: django.pot
pretix_esncard/locale/en/LC_MESSAGES/: django.po
pretix_esncard/locale/sv/LC_MESSAGES/: django.po
